# meta_ai_TeamTitans

./: .gitignore  Dockerfile  README.md  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_Server.py  test_agent.py  validate-submission.sh
data/: email_bank.json  priya.txt
email_triage_env/: client.py  env.example  gitignore  grader.py  inference.py  models.py  openenv.yaml  requirements.txt
server/: Dockerfile  app.py  environment.py
tasks/: task_1_easy.json  task_2_medium.json  task_3_hard.json
tests/: test_client.py  test_environment.py  test_grader.py
