[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meta_ai_TeamTitans"
version = "0.1.0"
description = "Email Triage RL Environment for Meta Hackathon"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic"
]
[project.scripts]
server = "server.app:main"